--- a/backend/requirements/requirements.txt
+++ b/backend/requirements/requirements.txt
@@ -8,7 +8,7 @@ autopep8==2.3.2
 # db
 pydantic2==1.1.15
 motor==3.7.0
-pymongo==4.12.0
+mysql-connector-python==9.4.0
 alembic==1.15.2
 SQLAlchemy==2.0.40
 # auth
